--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev":"nodemon src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [
     "node",
@@ -14,10 +14,25 @@
   "author": "hamiltoniano98",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
+    "bcrpyt": "^2.0.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "jsonwebtoken": "9.0.2",
+    "mongodb": "6.8.0",
+    "mongoose": "8.5.4",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "eslint": "^8.57.0",
+    "nodemon": "3.1.4",
+    "prettier": "^3.3.3",
+    "prettier-eslint": "^16.3.0",
+    "standard": "17.1.0"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
